--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         Sem vacina como prevenção e sem remédio para tratamento do novo coronavírus, o isolamento de pessoas em casa se torna a principal estratégia para evitar que a doença se alastre, provocando mortes e uma verdadeira catástrofe.
                     </p>
                     <footer>
-                        <img src="imgs\CASA.JPG" width="300px">
+                        <img src="imgs\CASA.jpg" width="300px">
                     </footer>
                 </article>            
             </section>            
@@ -68,7 +68,7 @@
                      <br><br>  Os primeiros coronavírus humanos foram isolados pela primeira vez em 1937. No entanto, foi em 1965 que o vírus foi descrito como coronavírus, em decorrência do perfil na microscopia, parecendo uma coroa.
                      <br><br>  A maioria das pessoas se infecta com os coronavírus comuns ao longo da vida, sendo as crianças pequenas mais propensas a se infectarem com o tipo mais comum do vírus. Os coronavírus mais comuns que infectam humanos são o alpha coronavírus 229E e NL63 e beta coronavírus OC43, HKU1.
                      <br><br>
-                     <img src="imgs\corona.JPG" width="200px">
+                     <img src="imgs\corona.jpg" width="200px">
                 </p>                
             </aside>            
             <footer>
