--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </aside>            
             <footer>
                 <h2>Este é um site usado apenas para fins educativos afim de buscar conhecimento nas linguagens de programação!!!
-                    <br>Covid-19 é algo sério! então tome todas as medidas necessarias e FIQUE EM CASA!</h2>
+                    <br>Covid-19 é algo sério! Tome todas as medidas necessarias e FIQUE EM CASA!</h2>
             </footer>            
         </div>        
     </body>
